--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,7 @@ security:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
         
-            # user_checker: App\Security\UserEnabledChecker
+            user_checker: App\Security\UserEnabledChecker
         main:
             anonymous: lazy
             provider: app_user_provider
