(check) Add Second DB to Make Agrega

--- a/.env
+++ b/.env
@@ -26,7 +26,8 @@ APP_SECRET=6e2b522312b970f56e1d1b982113f469
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root@127.0.0.1:3306/apitest?serverVersion=5.0.12"
+MAIN_DATABASE_URL="mysql://root@127.0.0.1:3306/apitest?serverVersion=5.0.12"
+GPMB_DATABASE_URL="mysql://ibn19055:Bti@2010.@10.0.2.4:3306/parcbus?serverVersion=5.5.16"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
