--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,19 +1,35 @@
 doctrine:
     dbal:
-        override_url: true
-        url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        server_version: '5.0.12'
+        default_connection: main_db
+        connections:
+            main_db:
+                url: '%env(resolve:MAIN_DATABASE_URL)%'
+                # IMPORTANT: You MUST configure your server version,
+                # either here or in the DATABASE_URL env var (see .env file)
+                server_version: '5.0.12'
+            gpmb_db:
+                url: '%env(resolve:GPMB_DATABASE_URL)%'
+                # IMPORTANT: You MUST configure your server version,
+                # either here or in the DATABASE_URL env var (see .env file)
+                server_version: '5.5.16'
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
-        mappings:
-            App:
-                is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+        entity_managers:
+            main_db:
+                connection: main_db
+                mappings: 
+                    Main:
+                        is_bundle: false
+                        type: annotation
+                        dir: '%kernel.project_dir%/src/Entity'
+                        prefix: 'App\Entity'
+                        alias: Main
+            gpmb_db:
+                connection: gpmb_db
+                mappings:
+                    Gpmb:
+                        is_bundle: false
+                        type: annotation
+                        dir: '%kernel.project_dir%/src/Entity'
+                        prefix: 'App\Entity'
+                        alias: Gpmb
